fixed i in LinkedIn & Right of Icons

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<img src="https://imgur.com/AK6f8Sq.jpg" width="57" height="34" border="0" alt=""></a></td>
 		<td>
 			<a href="https://www.linkedin.com/in/stephanie-geddes-22260419/">
-				<img src="ihttps://imgur.com/vBipveT.jpg" width="38" height="34" border="0" alt=""></a></td>
+				<img src="https://imgur.com/vBipveT.jpg" width="38" height="34" border="0" alt=""></a></td>
 		<td rowspan="2">
-			<img src="ihttps://imgur.com/RO5D8rx.jpg" width="225" height="50" alt=""></td>
+			<img src="https://imgur.com/RO5D8rx.jpg" width="225" height="50" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="2">
